[package]
name = "openssl-sys"
version = "0.9.67"
authors = ["Alex Crichton <alex@alexcrichton.com>",
           "Steven Fackler <sfackler@gmail.com>"]
license = "MIT"
description = "FFI bindings to OpenSSL"
repository = "https://github.com/sfackler/rust-openssl"
readme = "README.md"
categories = ["cryptography", "external-ffi-bindings"]
links = "openssl"
build = "build/main.rs"

[features]
vendored = ['openssl-src']

[dependencies]
libc = "0"

[build-dependencies]
cc = "1"
openssl-src = { version = "111.0.1", optional = true }
pkg-config = "0"
autocfg = "1"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0"

# We don't actually use metadeps for annoying reasons but this is still here for tooling
[package.metadata.pkg-config]
openssl = "1.0.1"
