[package]
name = "systest"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
rust-version = "1.88.0"

[dependencies]
libc = "0.2"
openssl-sys = { path = "../openssl-sys" }

[build-dependencies]
ctest = "0.5"

[features]
vendored = ['openssl-sys/vendored']
bindgen = ['openssl-sys/bindgen']
